[fix] 검색 기능 수정 - 차단된 계정 필터링